tests/fixtures/invalid/float_str.py
# Cannot call float() with Str
x = float("hello")
